Optimisation des jauges

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ body{
   display: flex;
   flex-flow: column;
   width: 100%;
+  height: max-content;
   justify-content: space-between;
   padding: 0;
   margin: 0;
@@ -61,13 +62,15 @@ body{
   justify-self: center;
 }
 .input-search {
-  width: 70%;
+  width: 80%;
 }
 .container-search input{
   border: none;
-  font-size: 120%;
+  font-size: 119%;
   background: none;
-  justify-self: center;
+  width: 93%;
+  margin-top: 2px;
+  margin-left: 3px;
   outline: none;
 }
 
@@ -78,8 +81,11 @@ body{
   justify-content: flex-start;
 }
 .close-icon{
-  margin-top: -1%;
+  margin-top: -3%;
   justify-self: flex-end;
+}
+.thick_vertical-icon{
+  margin-right: -4px;
 }
 .profil{
   margin-top: 35%;
@@ -98,7 +104,7 @@ body{
   margin-left: 30%;
   height: 120px;
   color: var(--white-color);
-  font-size: 70%;
+  font-size: 90%;
 }
 .btn{
   background: var(--red-color);
@@ -107,6 +113,7 @@ body{
   width: 75px;
   height: 75px;
   justify-content: flex-end;
+  position: relative;
   font-size: 40px;
   font-style: normal;
   border: none;
@@ -162,13 +169,11 @@ body{
   flex-flow: column;
   border-radius: 5px;
   background-color: var(--white-color);
-  padding: 0;
-  margin: 0;
   width: 35%;
   justify-content: space-between;
   box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.1);
   padding-top: 20px;
-  padding-bottom: 2.2%;
+  padding-bottom: 25px;
 }
 .navigation-projet{
   display: flex;
@@ -201,10 +206,12 @@ body{
 
 .jauges{
   width: 80%;
+  height: max-content;
   margin-left: 16%;
   background: none;
   margin-bottom: 4%;
 }
+/*Debut premiere competence*/
 .m1{
   width: 75%;
   height: 4px;
@@ -226,13 +233,135 @@ body{
   margin-left: 76%;
   margin-top: -2.7%;
 }
+/*Fin premiere competence*/
+
+/*Debut Deuxieme competence*/
+.m12{
+  width: 60%;
+  height: 4px;
+  background-color: var(--primary-color);
+  margin-bottom: 6%;
+}
+.m22{
+  width: 15px;
+  height: 15px;
+  border-radius: 190%;
+  background-color: var(--primary-color);
+  margin-top: -8.7%;
+  margin-left: 60%;
+}
+.m32{
+  width: 31%;
+  height: 4px;
+  background-color: rgb(206, 206, 206);
+  margin-left: 64.3%;
+  margin-top: -2.7%;
+}
+/*Fin deuxieme competence*/
+
+/*Debut troisieme competence*/
+.m13{
+  width: 74%;
+  height: 4px;
+  background-color: var(--primary-color);
+  margin-bottom: 6%;
+}
+.m23{
+  width: 15px;
+  height: 15px;
+  border-radius: 190%;
+  background-color: var(--primary-color);
+  margin-top: -8.7%;
+  margin-left: 71.6%;
+}
+.m33{
+  width: 20%;
+  height: 4px;
+  background-color: rgb(206, 206, 206);
+  margin-left: 76%;
+  margin-top: -2.7%;
+}
+/*Fin troisieme competence*/
+
+/*Debut quatrieme competence*/
+.m14{
+  width: 56%;
+  height: 4px;
+  background-color: var(--primary-color);
+  margin-bottom: 6%;
+}
+.m24{
+  width: 15px;
+  height: 15px;
+  border-radius: 190%;
+  background-color: var(--primary-color);
+  margin-top: -8.7%;
+  margin-left: 55%;
+}
+.m34{
+  width: 36%;
+  height: 4px;
+  background-color: rgb(206, 206, 206);
+  margin-left: 59.3%;
+  margin-top: -2.7%;
+}
+/*Fin quatrieme competence*/
+
+/*Debut cinquieme competence*/
+.m15{
+  width: 86%;
+  height: 4px;
+  background-color: var(--primary-color);
+  margin-bottom: 6%;
+}
+.m25{
+  width: 15px;
+  height: 15px;
+  border-radius: 190%;
+  background-color: var(--primary-color);
+  margin-top: -8.7%;
+  margin-left: 84%;
+}
+.m35{
+  width: 8%;
+  height: 4px;
+  background-color: rgb(206, 206, 206);
+  margin-left: 88.3%;
+  margin-top: -2.7%;
+}
+/*Fin cinqieme competence*/
+
+/*Debut sizieme competence*/
+.m16{
+  width: 76%;
+  height: 4px;
+  background-color: var(--primary-color);
+  margin-bottom: 6%;
+}
+.m26{
+  width: 15px;
+  height: 15px;
+  border-radius: 190%;
+  background-color: var(--primary-color);
+  margin-top: -8.7%;
+  margin-left: 75%;
+}
+.m36{
+  width: 17%;
+  height: 4px;
+  background-color: rgb(206, 206, 206);
+  margin-left: 79.3%;
+  margin-top: -2.7%;
+}
+/*Fin sizieme competence*/
+
 .right-column{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 63%;
   margin-left: 37%;
-  margin-top: -116%;
+  margin-top: -1543px;
 }
 .experience{
   display: flex;
@@ -265,7 +394,7 @@ body{
 }
 
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:1110px) {
   /*.container{
     padding-left: 20px;
     padding-right: -30px;
@@ -326,6 +455,19 @@ body{
     justify-content: center;
     padding: 0;
     margin: 0;
+  }
+  .container-search input{
+    border: none;
+    font-size: 150%;
+    background: none;
+    width: 93%;
+    margin-top: 2px;
+    margin-left: 10px;
+    outline: none;
+  }
+  .close-icon{
+    margin-top: -1.5%;
+    justify-self: flex-end;
   }
   .personnel{
     order: 1;
