--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,6 @@ body{
   flex-flow: column;
   width: 100%;
   height: max-content;
-  justify-content: space-between;
   padding: 0;
   margin: 0;
 }
@@ -81,7 +80,7 @@ body{
   justify-content: flex-start;
 }
 .close-icon{
-  margin-top: -3%;
+  margin-top: -2%;
   justify-self: flex-end;
 }
 .thick_vertical-icon{
@@ -93,6 +92,7 @@ body{
 }
 .image-background{
   background-image: url(../img/ordi.jpg);
+  box-shadow: 100% 0px 0px 100% rgba(0, 0, 180, 2.636);
   background-repeat: no-repeat;
   border-radius: 5px;
   background-size: cover;
@@ -173,7 +173,12 @@ body{
   justify-content: space-between;
   box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.1);
   padding-top: 20px;
-  padding-bottom: 25px;
+  padding-bottom: 35px;
+}
+.slide-rouge{
+  background-color: var(--red-color);
+  width: 30%;
+  height: 3px;
 }
 .navigation-projet{
   display: flex;
@@ -193,8 +198,16 @@ body{
   margin-left: 4%;
 } 
 .competence img{
-  margin-left: 350px;
+  margin-left: 80%;
+  justify-self: flex-end;
+  position: relative;
 }
+/*.skills{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  flex-wrap: nowrap;
+}*/
 .competence h1{
   font-size: 20px;
   margin-left: 16%;
@@ -361,7 +374,7 @@ body{
   justify-content: space-between;
   width: 63%;
   margin-left: 37%;
-  margin-top: -1543px;
+  margin-top: -1300px;
 }
 .experience{
   display: flex;
@@ -387,12 +400,6 @@ body{
     margin-left: 380px;
   }
 }
-@media screen and (max-width:452px) {
-  .cursus-academique{
-    position: stretch;
-  }
-}
-
 
 @media screen and (max-width:1110px) {
   /*.container{
@@ -503,6 +510,30 @@ body{
     margin-top: 3%;
   }
 }
+@media screen and (max-width: 768px) {
+  .menu_pointiller-icon-experience{
+    visibility: none;
+  }
+  .title-experience{
+    
+  }
+}
+@media screen and (min-width: 1100px) {
+  .right-column{
+    margin-top: -1560px;
+  }
+  .competence{
+    width: 35%;
+  }
+  .competence img{
+    margin-left: 300px;
+  }
+  .title-experience{
+    margin-left: 40px;
+    margin-bottom: 5px;
+    
+  }
+}
 
 
 
@@ -511,20 +542,23 @@ body{
 
 .scroll{
   overflow-y: scroll;
-  margin-right: 10px;
+  margin-right: 15px;
   overflow-x: hidden;
 }
 .scroll::-webkit-scrollbar-track{
   border-radius: 10px;
-  border-left: 5px solid var(--background-color);
-  border-right: 5px solid var(--background-color);
+  border-left: 3px solid var(--background-color);
+  margin-top: 20px;
+  margin-bottom: 40px;
+  
 }
 .scroll::-webkit-scrollbar-thumb{
   border-radius: 20px;
-  background-color: gray;
+  background-color: #4D4D4D;
 }
 .scroll::-webkit-scrollbar{
   width: 6px;
+  
 }
 .header-experience{
   background-color: var(--primary-color);
@@ -536,6 +570,7 @@ body{
 }
 .title-experience{
   color: var(--white-color);
+  margin-left: -20px;
 }
 .head-title{
   font-size: 150%;
@@ -555,6 +590,8 @@ body{
 .menu_pointiller-icon-experience{
   margin-left: 95%;
   margin-top: -7%;
+  position: relative;
+  justify-content: flex-end;
   margin-bottom: 8%;
 }
 .experience p{
@@ -567,7 +604,7 @@ body{
   background-color: var(--black-color); 
   margin-left: 4%;
   opacity: 20%;
-  width: 95%;
+  width: 94%;
   height: 1px;
 }
 .dimension{
@@ -628,6 +665,7 @@ body{
   width: 100%;
   height: 590px;
   margin-top: 3%;
+  padding-bottom: 12px;
   /*margin-top: 20px;*/
   /*height: 740px;*/
   /*margin-left: 490px;*/
