--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,8 +168,10 @@ body{
   display: flex;
   flex-flow: column;
   border-radius: 5px;
+  padding-left: 2%;
+  padding-right: 2%;
   background-color: var(--white-color);
-  width: 35%;
+  width: 31%;
   justify-content: space-between;
   box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.1);
   padding-top: 20px;
@@ -195,178 +197,56 @@ body{
 .competence input{
   width: 25px;
   height: 25px;
-  margin-left: 4%;
 } 
-.competence img{
-  margin-left: 80%;
-  justify-self: flex-end;
-  position: relative;
-}
-/*.skills{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  flex-wrap: nowrap;
-}*/
+
 .competence h1{
   font-size: 20px;
-  margin-left: 16%;
-  margin-top: -6%;
 }
-.competence p{
-  margin-left: 16%;
+
+.skills{
+  display: flex;
+  justify-content: space-between;
+  align-items: top;
+  width: 100%;
+}
+.head-title-skills{
+  font-size: 20px;
+}
+.titre{
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 4%;
+  margin-top: 8px;
+  justify-content: space-between;
+  height: 100%;
+  justify-content: left;
 }
 
 .jauges{
-  width: 80%;
-  height: max-content;
-  margin-left: 16%;
-  background: none;
+  display: flex;
+  width: 100%;
+  height: 5px;
+  position: relative;
+  justify-content: space-between;
+  background-color: var(--background-color);
   margin-bottom: 4%;
 }
 /*Debut premiere competence*/
 .m1{
-  width: 75%;
-  height: 4px;
+  height: inherit;
   background-color: var(--primary-color);
-  margin-bottom: 6%;
 }
 .m2{
   width: 15px;
   height: 15px;
-  border-radius: 190%;
+  border-radius: 50%;
+  position: absolute;
   background-color: var(--primary-color);
-  margin-top: -8.7%;
+  top: -5px;
   margin-left: 71.6%;
-}
-.m3{
-  width: 20%;
-  height: 4px;
-  background-color: rgb(206, 206, 206);
-  margin-left: 76%;
-  margin-top: -2.7%;
 }
 /*Fin premiere competence*/
-
-/*Debut Deuxieme competence*/
-.m12{
-  width: 60%;
-  height: 4px;
-  background-color: var(--primary-color);
-  margin-bottom: 6%;
-}
-.m22{
-  width: 15px;
-  height: 15px;
-  border-radius: 190%;
-  background-color: var(--primary-color);
-  margin-top: -8.7%;
-  margin-left: 60%;
-}
-.m32{
-  width: 31%;
-  height: 4px;
-  background-color: rgb(206, 206, 206);
-  margin-left: 64.3%;
-  margin-top: -2.7%;
-}
-/*Fin deuxieme competence*/
-
-/*Debut troisieme competence*/
-.m13{
-  width: 74%;
-  height: 4px;
-  background-color: var(--primary-color);
-  margin-bottom: 6%;
-}
-.m23{
-  width: 15px;
-  height: 15px;
-  border-radius: 190%;
-  background-color: var(--primary-color);
-  margin-top: -8.7%;
-  margin-left: 71.6%;
-}
-.m33{
-  width: 20%;
-  height: 4px;
-  background-color: rgb(206, 206, 206);
-  margin-left: 76%;
-  margin-top: -2.7%;
-}
-/*Fin troisieme competence*/
-
-/*Debut quatrieme competence*/
-.m14{
-  width: 56%;
-  height: 4px;
-  background-color: var(--primary-color);
-  margin-bottom: 6%;
-}
-.m24{
-  width: 15px;
-  height: 15px;
-  border-radius: 190%;
-  background-color: var(--primary-color);
-  margin-top: -8.7%;
-  margin-left: 55%;
-}
-.m34{
-  width: 36%;
-  height: 4px;
-  background-color: rgb(206, 206, 206);
-  margin-left: 59.3%;
-  margin-top: -2.7%;
-}
-/*Fin quatrieme competence*/
-
-/*Debut cinquieme competence*/
-.m15{
-  width: 86%;
-  height: 4px;
-  background-color: var(--primary-color);
-  margin-bottom: 6%;
-}
-.m25{
-  width: 15px;
-  height: 15px;
-  border-radius: 190%;
-  background-color: var(--primary-color);
-  margin-top: -8.7%;
-  margin-left: 84%;
-}
-.m35{
-  width: 8%;
-  height: 4px;
-  background-color: rgb(206, 206, 206);
-  margin-left: 88.3%;
-  margin-top: -2.7%;
-}
-/*Fin cinqieme competence*/
-
-/*Debut sizieme competence*/
-.m16{
-  width: 76%;
-  height: 4px;
-  background-color: var(--primary-color);
-  margin-bottom: 6%;
-}
-.m26{
-  width: 15px;
-  height: 15px;
-  border-radius: 190%;
-  background-color: var(--primary-color);
-  margin-top: -8.7%;
-  margin-left: 75%;
-}
-.m36{
-  width: 17%;
-  height: 4px;
-  background-color: rgb(206, 206, 206);
-  margin-left: 79.3%;
-  margin-top: -2.7%;
-}
-/*Fin sizieme competence*/
 
 .right-column{
   display: flex;
@@ -389,17 +269,7 @@ body{
   /*margin-left: 490px;*/
   box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.1);
 }
-@media screen and (max-width:1195px) {
-  .personnel{
-    width: max-content;
-  }
-  .competence{
-    width: max-content;
-  }
-  .competence img{
-    margin-left: 380px;
-  }
-}
+
 
 @media screen and (max-width:1110px) {
   /*.container{
@@ -509,31 +379,10 @@ body{
     width: 100%;
     margin-top: 3%;
   }
+  
 }
-@media screen and (max-width: 768px) {
-  .menu_pointiller-icon-experience{
-    visibility: none;
-  }
-  .title-experience{
-    
-  }
-}
-@media screen and (min-width: 1100px) {
-  .right-column{
-    margin-top: -1560px;
-  }
-  .competence{
-    width: 35%;
-  }
-  .competence img{
-    margin-left: 300px;
-  }
-  .title-experience{
-    margin-left: 40px;
-    margin-bottom: 5px;
-    
-  }
-}
+
+
 
 
 
@@ -571,14 +420,6 @@ body{
 .title-experience{
   color: var(--white-color);
   margin-left: -20px;
-}
-.head-title{
-  font-size: 150%;
-  margin-left: 12%;
-  margin-top: -7%;
-}
-.sub-title{
-  margin-left: 12%; 
 }
 
 .company-icon{
