--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ body{
   border-radius: 50%;
   width: 75px;
   height: 75px;
-  justify-content: flex-end;
+  justify-content: center;
   position: relative;
   font-size: 40px;
   font-style: normal;
@@ -309,15 +309,20 @@ body{
   .experience{
     width: 100%;
   }
+  
   .dimension{
     width: 100%;
-    /*justify-content: space-between;*/
+    display: flex;
+    flex-flow: wrap column;
   }
   .interet{
-    max-width: 51%;
+    width: 100%;
   }
   .langue{
-    width: 35%;
+    width: 100%;
+    margin-top: 3%;
+    margin-left: -150px;
+
   }
   .cursus-academique{
     width: 100%;
@@ -419,15 +424,17 @@ body{
   display: flex;
   flex-direction: row;
   margin-top: 3%;
+  justify-content: space-between;
+}
+.espace{
+  background: none;
+  flex-grow: 0.7;
 }
 .interet{
   box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.1);
   background-color: var(--white-color);
   width: max-content;
   flex-grow: 3;
-  margin-right: 3%;
-  /*margin-left: 490px;*/
-  /*margin-top: 25px;*/
   height: 230px;
   padding-left: 3%;
   border-radius: 5px;
@@ -445,12 +452,10 @@ body{
 .langue{
   box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.1);
   background-color: var(--white-color);
- /* margin-left: 1060px;*/
   width: max-content;
-  flex-grow: 2;
+  flex-grow: 1;
   border-radius: 5px;
   padding-left: 3%;
-  /*margin-top: -150px;*/
 }
 
 .langue input{
